test/classes/deitz/nested/test_nested2.good
test_nested2.chpl:5: error: Illegal use of identifier 'd' from enclosing type
Note: This source location is a guess.
